<?xml version="1.0"?>
<package format="2">
  <name>node</name>
  <version>0.0.0</version>
  <description>The node package</description>

  
  <maintainer email="alp@todo.todo">alp</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>


  <export>

  </export>
</package>
